feat: add env variables to application.yml

--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,13 @@
 spring:
   application:
     name: portfolio-backend
+  datasource:
+    url: ${JDBC_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   profiles:
-    active: local
+      active: local
+
   jpa:
     open-in-view: false
 management:
