--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,10 +2,16 @@ stages:
   - docker-build
 
 variables:
-  IMAGE_NAME: registry.gitlab.com/qs-portfolio/backend:latest
+  IMAGE_NAME: $CI_REGISTRY_IMAGE:latest
 
 docker-build:
   stage: docker-build
+  image: docker:20.10.16
+  services:
+    - docker:dind
+  variables:
+    DOCKER_HOST: tcp://docker:2375/
+    DOCKER_TLS_CERTDIR: ""
   script:
     - docker build -t $IMAGE_NAME .
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
