--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,12 @@
 stages:
-  - docker-build
+  - test
 
-variables:
-  IMAGE_NAME: $CI_REGISTRY_IMAGE:latest
-
-docker-build:
-  stage: docker-build
-  image: docker:20.10.16
-  services:
-    - docker:dind
+test_aws_connection:
+  stage: test
+  image: amazon/aws-cli:latest
   variables:
-    DOCKER_HOST: tcp://docker:2375/
-    DOCKER_TLS_CERTDIR: ""
+    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+    AWS_REGION: $AWS_REGION
   script:
-    - docker build -t $IMAGE_NAME .
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
-    - docker push $IMAGE_NAME
-  only:
-    - main
+    - aws sts get-caller-identity
