--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,9 @@ test_aws_connection:
   variables:
     AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
     AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-    AWS_DEFAULT_REGION: $AWS_REGION
+    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
   script:
+    - echo "Testing AWS connection..."
     - aws sts get-caller-identity
   only:
     - main
