--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,19 @@
 stages:
   - test
 
-test_aws_connection:
+test_aws:
   stage: test
-  image: amazon/aws-cli:latest
+  image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest
   variables:
-    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
+    AWS_DEFAULT_REGION: us-east-1       # your EKS region
+    CLUSTER_NAME: my-eks-cluster        # your EKS cluster name
   script:
-    - echo "Testing AWS connection..."
+    # Configure AWS CLI
+    - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+    - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+    - aws configure set default.region $AWS_DEFAULT_REGION
+
+    # Check AWS account info
+    - aws sts get-caller-identity
   only:
     - main
-    - test
