--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,8 @@ build-push:
     - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPOSITORY:$CI_COMMIT_SHORT_SHA
   only:
     - main
+  dependencies:
+    - login
 
 deploy-to-eks:
   stage: deploy-to-eks
@@ -50,6 +52,6 @@ deploy-to-eks:
   only:
     - main
   dependencies:
-    - build
+    - build-push
 
 
