--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,9 +27,8 @@ build-and-push:
 
 deploy-staging:
   stage: deploy
-  image: bitnami/kubectl:latest
+  image: lachlanevenson/k8s-awscli:latest
   script:
-    - apk add --no-cache python3 py3-pip
     - aws sts get-caller-identity
     - aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $EKS_CLUSTER_NAME
     - kubectl apply -f k8s/backend-deployment-staging.yaml
