--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,10 +27,10 @@ build-and-push:
 
 deploy-staging:
   stage: deploy
-  image: bitnami/kubectl:latest
+  image: amazon/aws-cli:latest
   script:
-    - install_packages() { apk add --no-cache python3 py3-pip curl; }; install_packages
-    - pip3 install awscli
+    - curl -LO "https://dl.k8s.io/release/$(curl -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+    - install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
     - aws sts get-caller-identity
     - aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $EKS_CLUSTER_NAME
     - kubectl apply -f k8s/backend-deployment-staging.yaml
