Use the correct version

--- a/k8s/backend-staging.yaml
+++ b/k8s/backend-staging.yaml
@@ -39,7 +39,7 @@ spec:
     - port: 8080
       targetPort: 8080
 ---
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
   name: aws-secretstore
@@ -57,7 +57,7 @@ spec:
             name: aws-creds
             key: secret-access-key
 ---
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: stagging-backend-env
