Update to load balancer

--- a/k8s/backend-staging.yaml
+++ b/k8s/backend-staging.yaml
@@ -31,7 +31,7 @@ kind: Service
 metadata:
   name: backend-staging-service
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: backend
     environment: staging
