--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ deploy-staging:
     - aws sts get-caller-identity
     - aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $EKS_CLUSTER_NAME
     - kubectl apply -f k8s/backend-staging.yaml
+    - kubectl rollout restart deployment backend-staging
   only:
     - main
   dependencies:
