--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ deploy-staging:
   script:
     - aws sts get-caller-identity
     - aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $EKS_CLUSTER_NAME
-    - kubectl apply -f k8s/backend-staging.yaml
+    - kubectl apply -f k8s/backend-staging.yaml --validate=false
     - kubectl rollout restart deployment backend-staging
   only:
     - main
