--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,14 +33,10 @@ build-and-push:
 deploy-staging:
   stage: deploy
   image: heyvaldemar/aws-kubectl:latest
-  variables:
-    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
   script:
     - aws sts get-caller-identity
     - aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $EKS_CLUSTER_NAME
-    - kubectl apply -f k8s/backend-staging.yaml --validate=false
+    - kubectl apply -f k8s/backend-staging.yaml
     - kubectl rollout restart deployment backend-staging
   only:
     - main
