--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,63 @@
 stages:
-  - test_aws
-  
+  - build
+  - deploy
+  - deploy-page
 
-test_aws:
-  stage: test_aws
-  image: registry.gitlab.com/gitlab-org/cloud-deploy/aws-base:latest
+variables:
+  ECR_REPOSITORY: backend
+  EKS_CLUSTER_NAME: portfolio-backend
+
+build-and-push:
+  stage: build
+  image: docker:20.10.16
+  services:
+    - docker:dind
   variables:
-    CLUSTER_NAME: my-eks-cluster
+    DOCKER_HOST: tcp://docker:2375/
+    DOCKER_TLS_CERTDIR: ""
+  before_script:
+    - apk add --no-cache python3 py3-pip
+    - pip3 install awscli
+    - aws sts get-caller-identity
+    - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+  script:
+    - docker build -t $ECR_REPOSITORY:$CI_COMMIT_SHORT_SHA .
+    - docker tag $ECR_REPOSITORY:$CI_COMMIT_SHORT_SHA $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPOSITORY:$CI_COMMIT_SHORT_SHA
+    - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPOSITORY:$CI_COMMIT_SHORT_SHA
+
+    - docker tag $ECR_REPOSITORY:$CI_COMMIT_SHORT_SHA $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPOSITORY:staging
+    - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPOSITORY:staging
+  only:
+    - main
+
+deploy-staging:
+  stage: deploy
+  image: heyvaldemar/aws-kubectl:latest
   script:
     - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
     - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
     - aws configure set default.region $AWS_DEFAULT_REGION
-
+    
     - aws sts get-caller-identity
+    - aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $EKS_CLUSTER_NAME
+    - kubectl apply -f k8s/aws-auth.yaml
+    - kubectl apply -f k8s/backend-staging.yaml
+    - kubectl rollout restart deployment backend-staging
+  only:
+    - main
+  dependencies:
+    - build-and-push
+
+pages:
+  stage: deploy-page
+  script:
+    - mkdir .public
+    - cp -r public/* .public
+    - mv .public public
+  artifacts:
+    paths:
+      - public
+  only:
+    - main
+
+
