--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,12 +33,29 @@ build-and-push:
 deploy-staging:
   stage: deploy
   image: heyvaldemar/aws-kubectl:latest
+  variables:
+    AWS_DEFAULT_REGION: "eu-north-1"
+    EKS_CLUSTER_NAME: "portfolio-backend"
   script:
-    - aws sts get-caller-identity
-    - aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $EKS_CLUSTER_NAME
-    - kubectl get pods
+    # Créer le dossier kubeconfig pour l'utilisateur courant
+    - mkdir -p $HOME/.kube
+
+    # Configurer les credentials AWS (depuis variables CI)
+    - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+    - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+    - aws configure set default.region $AWS_DEFAULT_REGION
+
+    # Générer kubeconfig dans un chemin lisible par l'utilisateur du runner
+    - aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $EKS_CLUSTER_NAME --kubeconfig $HOME/.kube/config
+
+    # Exporter la variable pour kubectl
+    - export KUBECONFIG=$HOME/.kube/config
+
+    # Vérifier la connexion au cluster
+    - kubectl get nodes
+
+    # Appliquer les manifests Kubernetes
     - kubectl apply -f k8s/backend-staging.yaml
-    - kubectl rollout restart deployment backend-staging
   only:
     - main
   dependencies:
