--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,25 +37,26 @@ deploy-staging:
     AWS_DEFAULT_REGION: "eu-north-1"
     EKS_CLUSTER_NAME: "portfolio-backend"
   script:
-    # Créer le dossier kubeconfig pour l'utilisateur courant
+    # Créer le dossier kubeconfig
     - mkdir -p $HOME/.kube
-
-    # Configurer les credentials AWS (depuis variables CI)
+  
+    # Configurer AWS
     - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
     - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
     - aws configure set default.region $AWS_DEFAULT_REGION
-
-    # Générer kubeconfig dans un chemin lisible par l'utilisateur du runner
-    - aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $EKS_CLUSTER_NAME --kubeconfig $HOME/.kube/config
-
-    # Exporter la variable pour kubectl
+  
+    # Générer kubeconfig dans le fichier voulu
+    - aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $EKS_CLUSTER_NAME --kubeconfig $HOME/.kube/config --alias portfolio-backend
+  
+    # S’assurer que kubectl lit le bon fichier
     - export KUBECONFIG=$HOME/.kube/config
-
-    # Vérifier la connexion au cluster
+  
+    # Tester la connexion
     - kubectl get nodes
-
-    # Appliquer les manifests Kubernetes
+  
+    # Déployer
     - kubectl apply -f k8s/backend-staging.yaml
+  
   only:
     - main
   dependencies:
