--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,21 +37,11 @@ deploy-staging:
     AWS_DEFAULT_REGION: "eu-north-1"
     EKS_CLUSTER_NAME: "portfolio-backend"
   script:
-    # Créer un kubeconfig temporaire dans le dossier de travail
-    - export KUBECONFIG=$CI_PROJECT_DIR/kubeconfig_temp
-
-    # Configurer AWS
     - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
     - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
     - aws configure set default.region $AWS_DEFAULT_REGION
-
-    # Générer le kubeconfig pour le cluster
     - aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $EKS_CLUSTER_NAME --kubeconfig $KUBECONFIG
-
-    # Vérifier la connexion au cluster
-    - kubectl get nodes
-
-    # Appliquer les manifests
+    - kubectl apply --validate=false -f k8s/aws-auth.yaml
     - kubectl apply -f k8s/backend-staging.yaml
 
   only:
