--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ deploy-staging:
   image: heyvaldemar/aws-kubectl:latest
   variables:
     AWS_DEFAULT_REGION: "eu-north-1"
-    EKS_CLUSTER_NAME: "portfolio-backend"
+    EKS_CLUSTER_NAME: "portfolio-cluster"
   script:
     - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
     - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
