--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,5 +1,6 @@
 jwt_secret: e113ae30-637c-4314-8215-6384b117aa3d
 polygon_api_key: SECRET_KEY
+finnhub_api_key: SECRET_KEY
 
 spring:
   datasource:
