--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -7,6 +7,10 @@ spring:
     url: jdbc:postgresql://localhost:5432/portfolio
     username: portfolio
     password: portfolio
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: local-consumer-group
 
 management:
   endpoints:
