add captcha but with temp routes for testing

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,7 @@
 jwt_secret: ${JWT_SECRET}
 polygon_api_key: ${POLYGON_API_KEY}
 finnhub_api_key: ${FINNHUB_API_KEY}
+recaptcha: ${CAPTCHA_SECRET_KEY}
 
 spring:
   datasource:
